# kuunda-data-science-challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pylint.yml
app/: main.py  train_model_main.py
app/utils/: get_data.py  model_io.py  models.py
notebooks/: EDA.ipynb  Model.ipynb
