[tool.poetry]
name = "jupyterlab_docker"
version = "0.11.1"
description = "Environment JupyterLab Poetry docker-compose"
authors = ["imaima"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "2.1.3"
jupyterlab = "^4.2.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
matplotlib = "^3.6"
seaborn = "^0.12"
sympy = "^1.11"
scipy = "^1.13.1"
pandas-datareader = "~0.10"
xgboost = "^1.7.3"
mlxtend = "^0.23.1"
shap = "^0.43.0"
ephem = "^4.1.5"
pystan = "^3.10.0"
lightgbm = "^4.6.0"
imbalanced-learn = "^0.12.0"
openpyxl = "^3.1.3"
boto3 = "^1.38.23"



[tool.poetry.group.dev.dependencies]
rope = "^1.8.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
autopep8 = "^2.0.2"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry_core>=2.1.2"]
build-backend = "poetry.core.masonry.api"